--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="it">
 
 <head>
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xtreme surf school</title>
     <link rel="stylesheet" href="../CSS/index.css">
+     <link rel="icon" type="image/x-icon" href="/MULTIMEDIA/FOTO/x.ico">
 </head>
 
 <body>
@@ -13,7 +14,8 @@
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup()">&times;</span>
             <h2>Benvenuti nel nostro sito!</h2><br />
-            <p>Questo sito &egrave; parte di un progetto scolastico. Ogni riferimento a fatti e persone &egrave; puramente casuale.
+            <p>Questo sito &egrave; parte di un progetto scolastico. Ogni riferimento a fatti e persone &egrave;
+                puramente casuale.
             </p>
         </div>
     </div>
@@ -26,11 +28,14 @@
                 <li><a href="../HTML/aboutUs.html">About Us</a></li>
                 <li><a href="../HTML/corsi.html">Corsi</a></li>
                 <li><a href="../HTML/contatti.html">Contatti</a></li>
-                <!-- Pulsanti lingua -->
-                <a class="lang-btn" href="../HTML/index.html"><img src="it_button.png"></a>
-                <a class="lang-btn" href="../HTML/indexEn.html"><img src="en_button.png"></a>
+                
             </ul>
         </nav>
+
+        <!-- Pulsanti lingua -->
+        <a class="lang-btn" href="../HTML/index.html"><img src="/MULTIMEDIA/FOTO/it_button.png"></a>
+        <a class="lang-btn" href="../HTML/indexEn.html"><img src="/MULTIMEDIA/FOTO/en_button.png"></a>
+        
     </header>
     <main>
         <section>
@@ -76,55 +81,55 @@
             <img src="/MULTIMEDIA/FOTO/fotoHome3.jpg" alt="studente della scuola di surf">
         </section>
 
-<section id="caroselloSurf">
-      <h4>Galleria immagini</h4>
-        <div class="slideshow-container">
+        <section id="caroselloSurf">
+            <h4>Galleria immagini</h4>
+            <div class="slideshow-container">
 
 
-            <div class="mySlides fade">
+                <div class="mySlides fade">
 
-                <img src="../MULTIMEDIA/FOTO/fotoSurf1.jpg" style="width:100%">
+                    <img src="../MULTIMEDIA/FOTO/fotoSurf1.jpg" style="width:100%">
+
+                </div>
+
+                <div class="mySlides fade">
+                    <img src="../MULTIMEDIA/FOTO/fotoSurf2.jpg" style="width:100%">
+
+                </div>
+
+                <div class="mySlides fade">
+
+                    <img src="../MULTIMEDIA/FOTO/fotoSurf3.jpg" style="width:100%">
+
+                </div>
+
+                <div class="mySlides fade">
+
+                    <img src="../MULTIMEDIA/FOTO/fotoSurf4.jpg" style="width:100%">
+
+                </div>
+                <div class="mySlides fade">
+
+                    <img src="../MULTIMEDIA/FOTO/fotoSurf5.jpg" style="width:100%">
+
+                </div>
+                <div class="mySlides fade">
+
+                    <img src="../MULTIMEDIA/FOTO/fotoSurf6.jpg" style="width:100%">
+
+                </div>
 
             </div>
+            <br>
 
-            <div class="mySlides fade">
-                <img src="../MULTIMEDIA/FOTO/fotoSurf2.jpg" style="width:100%">
-
+            <div id="contenitorePunti" style="text-align:center">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
             </div>
-
-            <div class="mySlides fade">
-
-                <img src="../MULTIMEDIA/FOTO/fotoSurf3.jpg" style="width:100%">
-
-            </div>
-
-            <div class="mySlides fade">
-
-                <img src="../MULTIMEDIA/FOTO/fotoSurf4.jpg" style="width:100%">
-
-            </div>
-            <div class="mySlides fade">
-
-                <img src="../MULTIMEDIA/FOTO/fotoSurf5.jpg" style="width:100%">
-
-            </div>
-            <div class="mySlides fade">
-
-                <img src="../MULTIMEDIA/FOTO/fotoSurf6.jpg" style="width:100%">
-
-            </div>
-
-        </div>
-        <br>
-
-        <div id="contenitorePunti" style="text-align:center">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
         </section>
     </main>
 
