--- a/HTML/corsi.html
+++ b/HTML/corsi.html
@@ -14,7 +14,7 @@
         <nav>
             <ul id="navbar">
                 <li><img src="/MULTIMEDIA/FOTO/logo.png"></li>
-                <li><a href="../HTML/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="../HTML/aboutUs.html">About Us</a></li>
                 <li><a href="../HTML/corsi.html">Corsi</a></li>
                 <li><a href="../HTML/contatti.html">Contatti</a></li>
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <h1 id="titolo1">I NOSTRI <br /> CORSI <br /> CORSI </h1>
+            <h1 id="titolo1"> I <br /> NOSTRI <br /> CORSI </h1>
             <img id="imgbck" src="/MULTIMEDIA/FOTO/kitesurfCorsi.jpg">
         </section>
 <div>
