--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xtreme surf school</title>
     <link rel="stylesheet" href="../CSS/index.css">
-     <link rel="icon" type="image/x-icon" href="/MULTIMEDIA/FOTO/x.ico">
+    <link rel="icon" type="image/x-icon" href="/MULTIMEDIA/FOTO/x.ico">
 </head>
 
 <body>
@@ -24,18 +24,14 @@
         <nav>
             <ul id="navbar">
                 <li><img src="/MULTIMEDIA/FOTO/logo.png"></li>
-                <li><a href="../HTML/index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="../HTML/aboutUs.html">About Us</a></li>
                 <li><a href="../HTML/corsi.html">Corsi</a></li>
                 <li><a href="../HTML/contatti.html">Contatti</a></li>
-                
+
             </ul>
         </nav>
 
-        <!-- Pulsanti lingua -->
-        <a class="lang-btn" href="../HTML/index.html"><img src="/MULTIMEDIA/FOTO/it_button.png"></a>
-        <a class="lang-btn" href="../HTML/indexEn.html"><img src="/MULTIMEDIA/FOTO/en_button.png"></a>
-        
     </header>
     <main>
         <section>
