--- a/HTML/aboutUs.html
+++ b/HTML/aboutUs.html
@@ -14,7 +14,7 @@
         <nav>
             <ul id="navbar">
                 <li><img src="/MULTIMEDIA/FOTO/logo.png"></li>
-                <li><a href="../HTML/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="../HTML/aboutUs.html">About Us</a></li>
                 <li><a href="../HTML/corsi.html">Corsi</a></li>
                 <li><a href="../HTML/contatti.html">Contatti</a></li>
