--- a/HTML/aboutUs.html
+++ b/HTML/aboutUs.html
@@ -47,9 +47,9 @@
                 <figure id="iNostriIstruttori">
                     <img src="/MULTIMEDIA/FOTO/foto_istruttori/zio_to.png" alt="Foto 1">
                     <h4>Antonio</h4>
-                    <figcaption id="istr"> Antonio è un appassionato surfista con oltre 10 anni di esperienza. Le sue
+                    <figcaption id="istr"> Antonio &egrave; un appassionato surfista con oltre 10 anni di esperienza. Le sue
                         lezioni sono piene di energia e divertimento. Ama insegnare ai principianti come cavalcare le
-                        onde e migliorare la loro tecnica. Quando non è in acqua, troverai Antonio a raccontare storie di
+                        onde e migliorare la loro tecnica. Quando non &egrave; in acqua, troverai Antonio a raccontare storie di
                         avventure oceaniche ai suoi studenti.</figcaption>
                         <a href="/HTML/corsi.html#surf"> <input type="image" id="vediCorsi" src="/MULTIMEDIA/FOTO/corsi_button.png" alt="link ai corsi"></a>
                 </figure>
@@ -89,10 +89,10 @@
             </figure>
             <section id="contatti">
                 <section id="social">
-                    <a href="www.facebook.com">
+                    <a href="https://www.facebook.com/profile.php?id=61557305204745&mibextid=LQQJ4d">
                         <img src="/MULTIMEDIA/FOTO/fb_logo.png">
                     </a>
-                    <a href="/MULTIMEDIA/FOTO/insta_logo.png">
+                    <a href="https://www.instagram.com/xtremesurfschool?igsh=cDh5NDVqaDFmZWRq&utm_source=qr">
                         <img src="/MULTIMEDIA/FOTO/insta_logo.png">
                     </a>
                     <a href="/MULTIMEDIA/FOTO/whatsapp_logo.png"></a>
@@ -100,7 +100,7 @@
                 </section>
                 <address>
                     <p>e-mail : <a href="mailto: info@XtremeSurfSchool.com"
-                            style="color: orange;">info@XtremeSurfSchool.com</a></p>
+                            style="color: #FFA500;">info@XtremeSurfSchool.com</a></p>
                     <p>telefono : 666 - 333444888 </p>
                     <p>Via Nazario Sauro, 3 Bari</p>
                     <p>70021 Italy</p>
