--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Contatti </title>
     <link rel="stylesheet" href="/CSS/contatti.css">
-     <link rel="icon" type="image/x-icon" href="/MULTIMEDIA/FOTO/x.ico">
+    <link rel="icon" type="image/x-icon" href="/MULTIMEDIA/FOTO/x.ico">
 </head>
 <header>
     <nav>
@@ -28,9 +28,11 @@
     <article class="descrizioneContatti">
         <h4>VIENI A TROVARCI </h4>
         <p>
-            La nostra scuola di surf è situata lungo il suggestivo Lungomare Nazario Sauro, 3 a Bari! Siamo entusiasti
+            La nostra scuola di surf &egrave; situata lungo il suggestivo Lungomare Nazario Sauro, 3 a Bari! Siamo
+            entusiasti
             di condividere la nostra passione per il surf con voi. Se avete domande, richieste o semplicemente volete
-            saperne di più sui nostri corsi e servizi, non esitate a contattarci. Il nostro team esperto è qui per
+            saperne di pi&ugrave; sui nostri corsi e servizi, non esitate a contattarci. Il nostro team esperto &egrave;
+            qui per
             fornirvi tutte le informazioni di cui avete bisogno per iniziare la vostra avventura sull'acqua. Potete
             raggiungerci via telefono, e-mail o compilando il modulo di contatto qui sotto. Non vediamo l'ora di darvi
             il benvenuto nella nostra scuola di surf e di condividere insieme momenti indimenticabili sull'incantevole
@@ -80,7 +82,7 @@
         <h3>Newsletter</h3>
         <p>Cavalca l'onda e rimani sempre aggiornato sulle ultime novit&agrave;</p>
         <br />
-        <input type="email" name="eMail" id="eMail" placeholder="inserisci e-mail" /><br />
+        <input type="email" name="eMail2" id="eMail2" placeholder="inserisci e-mail" /><br />
         <input type="image" id="submitButt" src="/MULTIMEDIA/FOTO/submit.png" alt="submit">
         <br />
     </form>
@@ -89,17 +91,18 @@
     </figure>
     <section id="contatti">
         <section id="social">
-            <a href="www.facebook.com">
+            <a href="https://www.facebook.com/profile.php?id=61557305204745&mibextid=LQQJ4d">
                 <img src="/MULTIMEDIA/FOTO/fb_logo.png">
             </a>
-            <a href="/MULTIMEDIA/FOTO/insta_logo.png">
+            <a href="https://www.instagram.com/xtremesurfschool?igsh=cDh5NDVqaDFmZWRq&utm_source=qr">
                 <img src="/MULTIMEDIA/FOTO/insta_logo.png">
             </a>
             <a href="/MULTIMEDIA/FOTO/whatsapp_logo.png"></a>
             <img src="/MULTIMEDIA/FOTO/whatsapp_logo.png">
         </section>
         <address>
-            <p>e-mail : <a href="mailto: info@XtremeSurfSchool.com" style="color: orange;">info@XtremeSurfSchool.com</a>
+            <p>e-mail : <a href="mailto: info@XtremeSurfSchool.com"
+                    style="color: #FFA500;">info@XtremeSurfSchool.com</a>
             </p>
             <p>telefono : 666 - 333444888 </p>
             <p>Via Nazario Sauro, 3 Bari</p>
