--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
         </figure>
         <section id="contatti">
             <section id="social">
-                <a href="www.facebook.com">
+                <a href="https://www.facebook.com/profile.php?id=61557305204745&mibextid=LQQJ4d">
                     <img src="/MULTIMEDIA/FOTO/fb_logo.png">
                 </a>
-                <a href="/MULTIMEDIA/FOTO/insta_logo.png">
+                <a href="https://www.instagram.com/xtremesurfschool?igsh=cDh5NDVqaDFmZWRq&utm_source=qr">
                     <img src="/MULTIMEDIA/FOTO/insta_logo.png">
                 </a>
                 <a href="/MULTIMEDIA/FOTO/whatsapp_logo.png"></a>
@@ -155,7 +155,7 @@
             </section>
             <address>
                 <p>e-mail : <a href="mailto: info@XtremeSurfSchool.com"
-                        style="color: orange;">info@XtremeSurfSchool.com</a></p>
+                        style="color: #FFA500;">info@XtremeSurfSchool.com</a></p>
                 <p>telefono : 666 - 333444888 </p>
                 <p>Via Nazario Sauro, 3 Bari</p>
                 <p>70021 Italy</p>
