--- a/HTML/corsi.html
+++ b/HTML/corsi.html
@@ -61,12 +61,12 @@
 
         <section id="meteo">
             <div id="iframeContainer">
-                <iframe width="650" height="450"
+                <iframe width="550" height="450"
                     src="https://embed.windy.com/embed2.html?lat=41.112&lon=16.855&detailLat=41.112&detailLon=16.855&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=true&metricWind=km%2Fh&metricTemp=°C&radarRange=-1"
                     frameborder="0"></iframe>
             </div>
             <article id="condizioniMeteo">
-                <h5> CONTROLLA IL METEO </h5>
+                <h5>  Le Previsioni Meteo per pianificare la tua avventura con noi  </h5>
                 <p>
                     Esplora le onde con fiducia! Qui troverai una mappa interattiva per consultare facilmente le
                     previsioni meteo locali e pianificare le tue sessioni di surf con precisione, assicurandoti di
